--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "minimist": "^1.2.0",
     "neatjson": "^0.8.3",
     "svg-path-parser": "^1.0.1",
-    "svg-path-to-polygons": "^0.1.0",
+    "svg-path-to-polygons": "file:../svg-path-to-polygons",
     "vmath": "^1.3.1",
     "xml2js": "^0.4.17"
   },
